cabal-version:       >=1.10
name:                jbo
version:             0.1.0.0
license-file:        LICENSE
author:              Christine Dodrill
maintainer:          me@christine.website
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Jbo
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src